# mcp-auth-guard

./: .gitignore  README.md  pyproject.toml  validate_policy.py
.github/workflows/: pypi-publish.yml
docs/: getting-started.md
examples/: POLICY_GUIDE.md  README.md  TRANSPORT_GUIDE.md  http_client_example.py  http_roles_demo.py  policy_management.py  real_test_client.py  secure_config.yaml  secure_policy_deployment.yaml  test_client.py  weather_client_config.py  weather_policies.yaml  weather_server.py
examples/comprehensive_example/: comprehensive_basic_client.py  comprehensive_client.py  comprehensive_demo_README.md  comprehensive_policies.yaml  comprehensive_server.py
examples/weather_service/: README.md  basic_client.py  claude_desktop_config.json  test_client.py
src/mcp_auth_guard/: __init__.py  cli.py
src/mcp_auth_guard/identity/: __init__.py  api_key_auth.py  header_auth.py  jwt_auth.py  manager.py
src/mcp_auth_guard/middleware/: __init__.py  auth_guard.py  utils.py
src/mcp_auth_guard/policy/: __init__.py  builder.py  engine.py  evaluator.py  loader.py
src/mcp_auth_guard/schemas/: __init__.py  auth.py  policy.py  resource.py  response.py
src/mcp_auth_guard/utils/: __init__.py
tests/: test_api_key_security.py
